--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -23,7 +23,8 @@ project:
 # Configuration settings for new git repository.
 git:
   default_branch: master
-  remotes: {  }
+  remotes:
+    - 'https://github.com/hplord12/blt-artifact.git'
 deploy:
   # When manually deploying a tag, also tag the source repository.
   tag_source: true
